# MLFramework

./: CMakeLists.txt  README.md
include/: linear-gaussian-system.h  matrix.h  multivariate-normal.h
src/: main.cpp
test/: CMakeLists.txt  matrix-ops.cpp
